# linked_list_c

./: Cargo.toml  README.md
.cargo/: config.toml
src/: constlist.rs  customlist.rs  innerlist.rs  lib.rs  list.rs  llitem.rs
tests/: tests.rs
