[package]
name = "linked_list_c"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/linked_list_c-rs"
description = "Safely work with c compatible linked lists"
keywords = ["linked_list", "ffi", "c"]
categories = ["data-structures"]

[dependencies]
linked_list_c_derive = { version = "0.1", optional = true}
log = "0.4"

[dev-dependencies]
env_logger = "0.10"

[features]
default = []
derive = ["dep:linked_list_c_derive"]
